: Changing view options on the badges page no longer requires a page reload
: Fixed a bug where some functions weren't working correctly for users who hadn't configured a custom URL
: Fixed a bug that would occur when trying to leave multiple groups if there was an error on the page
: Fixed a bug that caused the homepage carousel to not display correctly until it scrolled past the first item


v8.4
-----
+ Added inventory market support for various games such as H1Z1 and Battleblock Theater
+ Added ability to determine difference between JPY and CNY currency codes
: Fixed an issue where search results would be duplicated or incorrect under certain circumstances
: Fixed a bug where some market sections weren't being totaled correctly
: Fixed a bug where "Open in Steam" would not work if Family settings were enabled
: Fixed several bugs where user's country code wouldn't be properly detected
: Fixed a bug where "Add to Wishlist" would sometimes not display properly when browsing discovery queue

v8.3
-----
+ Added a toggle to the market page to hide the list of individual games
+ Added a new feature that allows you to leave several groups at once without having to reload the page
+ Added a button to store pages to open that link in the Steam client
+ Added pricing support for Sila Games, Playfield, and Imperial Games
+ Added an option to disable automatically filtering guides by user language
: Fixed the market page totals to work with listings placed on hold
: Fixed a layout issue that caused header links not to show properly in the Steam header
: Fixed a bug that caused regional price comparisons not to show if the first sub on the page is free
: Fixed a bug that caused market sales totals not to display correctly

v8.2.4
-----
: Fixed a bug in country detection code

v8.2.3
-----
+ Added an option in the price menu to override prices displayed by Enhanced Steam
: Quick and Instant sale currency will now always match the user's wallet currency type

v8.2.2
-----